"""
Repository Analyzer Module

This module provides functionality to analyze repository structures and generate
detailed file tree representations with filtering capabilities.
"""

import os
import fnmatch
import json
from pathlib import Path
from typing import Dict, List, Optional, Union
from codewiki.src.be.dependency_analyzer.utils.patterns import DEFAULT_IGNORE_PATTERNS, DEFAULT_INCLUDE_PATTERNS


class RepoAnalyzer:
    def __init__(
        self,
        include_patterns: Optional[List[str]] = None,
        exclude_patterns: Optional[List[str]] = None,
    ) -> None:
        # Include patterns: if specified, use ONLY those patterns (replaces defaults)
        self.include_patterns = (
            include_patterns if include_patterns is not None else DEFAULT_INCLUDE_PATTERNS
        )
        # Exclude patterns: if specified, MERGE with default ignore patterns
        self.exclude_patterns = (
            list(DEFAULT_IGNORE_PATTERNS) + exclude_patterns
            if exclude_patterns is not None
            else list(DEFAULT_IGNORE_PATTERNS)
        )
        # Track namespaces when analyzing multiple paths
        self._namespace_roots: Dict[str, str] = {}  # namespace -> repo_path

    def analyze_repository_structure(self, repo_dir: Union[str, List[str]]) -> Dict:
        """
        Analyze repository structure for one or multiple paths.

        Args:
            repo_dir: Single repository path or list of repository paths

        Returns:
            Dictionary with file_tree and summary. For multiple paths,
            file_tree contains a merged tree with namespace-prefixed roots.
        """
        if isinstance(repo_dir, str):
            # Single path - maintain backward compatibility
            file_tree = self._build_file_tree(repo_dir)
            return {
                "file_tree": file_tree,
                "summary": {
                    "total_files": self._count_files(file_tree),
                    "total_size_kb": self._calculate_size(file_tree),
                },
            }
        else:
            # Multiple paths - build merged tree
            return self._analyze_multiple_repositories(repo_dir)

    def _analyze_multiple_repositories(self, repo_dirs: List[str]) -> Dict:
        """
        Analyze multiple repositories and merge their structures.

        Args:
            repo_dirs: List of repository paths

        Returns:
            Dictionary with merged file_tree and combined summary
        """
        import logging
        logger = logging.getLogger(__name__)

        logger.info(f"🔍 Analyzing {len(repo_dirs)} repository paths...")

        merged_children = []
        total_files = 0
        total_size_kb = 0.0

        for idx, repo_dir in enumerate(repo_dirs, 1):
            namespace = self._get_namespace_from_path(repo_dir)
            self._namespace_roots[namespace] = repo_dir

            logger.info(f"   ├─ [{idx}/{len(repo_dirs)}] Building file tree for: {repo_dir}")
            logger.info(f"   │  └─ Namespace: '{namespace}'")

            file_tree = self._build_file_tree(repo_dir)

            if file_tree:
                # Wrap this tree with namespace prefix
                namespaced_tree = {
                    "type": "directory",
                    "name": namespace,
                    "path": namespace,
                    "children": file_tree.get("children", []) if file_tree["type"] == "directory" else [file_tree],
                    "_namespace": namespace,
                    "_original_path": repo_dir
                }
                merged_children.append(namespaced_tree)

                # Accumulate summary stats
                files = self._count_files(file_tree)
                size = self._calculate_size(file_tree)
                total_files += files
                total_size_kb += size

                logger.info(f"   │  └─ Found {files} files ({size:.2f} KB)")
            else:
                logger.warning(f"   │  └─ ⚠️  No files found matching patterns")

        # Create root container
        merged_tree = {
            "type": "directory",
            "name": "multi-repo",
            "path": ".",
            "children": merged_children
        }

        logger.info(f"   └─ ✓ Merged {len(repo_dirs)} repositories:")
        logger.info(f"      ├─ Total files: {total_files}")
        logger.info(f"      ├─ Total size: {total_size_kb:.2f} KB")
        logger.info(f"      └─ Namespaces: {', '.join(self._namespace_roots.keys())}")

        return {
            "file_tree": merged_tree,
            "summary": {
                "total_files": total_files,
                "total_size_kb": total_size_kb,
                "repositories": len(repo_dirs),
                "namespaces": list(self._namespace_roots.keys())
            },
        }

    def _get_namespace_from_path(self, repo_path: str) -> str:
        """
        Generate a namespace prefix from a repository path.

        Args:
            repo_path: Path to repository

        Returns:
            Namespace string (e.g., 'openframe-frontend', 'ui-kit')
        """
        return os.path.basename(os.path.abspath(repo_path).rstrip(os.sep))

    def _build_file_tree(self, repo_dir: str) -> Dict:
        def build_tree(path: Path, base_path: Path) -> Optional[Dict]:
            relative_path = path.relative_to(base_path)
            relative_path_str = str(relative_path)

            # 🚫 Reject symlinks
            if path.is_symlink():
                return None

            # 🚫 Reject escaped paths (e.g., symlinks pointing outside)
            try:
                if not path.resolve().is_relative_to(base_path.resolve()):
                    return None
            except AttributeError:
                if not str(path.resolve()).startswith(str(base_path.resolve())):
                    return None

            if self._should_exclude_path(relative_path_str, path.name):
                return None

            if path.is_file():
                if not self._should_include_file(relative_path_str, path.name):
                    return None

                size = path.stat().st_size
                return {
                    "type": "file",
                    "name": path.name,
                    "path": relative_path_str,
                    "extension": path.suffix,
                    "_size_bytes": size,
                }

            elif path.is_dir():
                children = []
                try:
                    for child in sorted(path.iterdir()):
                        child_tree = build_tree(child, base_path)
                        if child_tree is not None:
                            children.append(child_tree)
                except PermissionError:
                    pass

                if children or str(relative_path) == ".":
                    return {
                        "type": "directory",
                        "name": path.name,
                        "path": relative_path_str,
                        "children": children,
                    }
                return None

            # Other types (sockets, devices, etc.)
            return None

        return build_tree(Path(repo_dir), Path(repo_dir))

    def _should_exclude_path(self, path: str, filename: str) -> bool:
        for pattern in self.exclude_patterns:
            if fnmatch.fnmatch(path, pattern) or fnmatch.fnmatch(filename, pattern):
                return True
            if pattern.endswith("/") and path.startswith(pattern.rstrip("/")):
                return True
            if path.startswith(pattern + "/") or path == pattern:
                return True
            if pattern in path.split("/"):
                return True
        return False

    def _should_include_file(self, path: str, filename: str) -> bool:
        if not self.include_patterns:
            return True
        for pattern in self.include_patterns:
            if fnmatch.fnmatch(path, pattern) or fnmatch.fnmatch(filename, pattern):
                return True
        return False

    def _count_files(self, tree: Dict) -> int:
        if tree["type"] == "file":
            return 1
        return sum(self._count_files(child) for child in tree.get("children", []))

    def _calculate_size(self, tree: Dict) -> float:
        if tree["type"] == "file":
            return tree.get("_size_bytes", 0) / 1024
        return sum(self._calculate_size(child) for child in tree.get("children", []))
